--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,8 @@
 TARGET = mp3
-OBJS = prx/supportlib.o usb.o audioscrobbler.o settings.o equalizer.o log.o m3u.o players/pspaudiolib.o players/id3.o players/mp3player.o players/oggplayer.o players/player.o mem64.o opendir.o main.o
+OBJS = prx/supportlib.o usb.o audioscrobbler.o settings.o equalizer.o log.o m3u.o \
+       players/pspaudiolib.o players/id3.o players/mp3player.o players/oggplayer.o \
+       players/mp3playerME.o players/aa3playerME.o players/player.o \
+       mem64.o opendir.o main.o
 
 #To build for custom firmware:
 BUILD_PRX = 1
@@ -11,7 +14,7 @@ ASFLAGS = $(CFLAGS)
 LIBDIR =
 
 LIBS = -lm -lpspgu -lmad -lvorbisidec  -lpspaudio -lpsppower \
-       -lpsphprm -lpspusb -lpspusbstor -lpspkubridge
+       -lpsphprm -lpspusb -lpspusbstor -lpspkubridge -lpspaudio -lpspaudiocodec
 LDFLAGS =
 EXTRA_TARGETS = EBOOT.PBP
 PSP_EBOOT_TITLE = LightMP3
