Initial FLAC support (many thanks to JLF65)

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 TARGET = mp3
 OBJS = prx/supportlib.o usb.o audioscrobbler.o settings.o equalizer.o log.o m3u.o \
        players/pspaudiolib.o players/id3.o players/mp3player.o players/oggplayer.o \
-       players/mp3playerME.o players/aa3playerME.o players/player.o \
+       players/mp3playerME.o players/aa3playerME.o players/flacplayer.o players/player.o \
        mem64.o opendir.o main.o
 
 #To build for custom firmware:
@@ -13,7 +13,7 @@ CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 LIBDIR =
 
-LIBS = -lm -lpspgu -lmad -lvorbisidec  -lpspaudio -lpsppower \
+LIBS = -lpspgu -lFLAC -lmad -lvorbisidec  -lpspaudio -lpsppower -lm \
        -lpsphprm -lpspusb -lpspusbstor -lpspkubridge -lpspaudio -lpspaudiocodec
 LDFLAGS =
 EXTRA_TARGETS = EBOOT.PBP
