--- a/src/makefile
+++ b/src/makefile
@@ -7,6 +7,7 @@ OBJS = prx/supportlib.o usb.o audioscrobbler.o settings.o equalizer.o log.o m3u.
 #To build for custom firmware:
 BUILD_PRX = 1
 #PSP_LARGE_MEMORY = 1
+PSP_FW_VERSION=371
 
 CFLAGS = -O3 -fomit-frame-pointer -ffast-math -frename-registers -G0 -Wall
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
