--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -44,6 +44,8 @@ POS_CPU_TEXT=248,1
 POS_HEADPHONES_ICON=350,1
 POS_REMOTE_ICON=310,1
 
+POS_HELP=110,51
+POS_POPUP=120,96
 
 ##########################################################################################################
 #PLAYER SETTINGS:
@@ -127,7 +129,6 @@ POS_PLAYLIST_BROWSER_INFO_BKG=5,200
 
 POS_PLAYLIST_NAME_LABEL=7,205
 POS_PLAYLIST_TOTAL_TRACKS_LABEL=7,220
-#POS_PLAYLIST_TOTAL_TIME_LABEL=0,0
 
 POS_PLAYLIST_NAME_VALUE=85,205
 POS_PLAYLIST_TOTAL_TRACKS_VALUE=85,220
