--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -7,23 +7,43 @@
 #TEXT COLORS:
 ##########################################################################################################
 RGBA_TOOLBAR_TEXT=0,0,0,255
-RGBA_BUTTONBAR_TEXT=0,0,0,255
-RGBA_BUTTONBAR_SELECTED_TEXT=255,255,255,255
-RGBA_POPUP_TITLE_TEXT=255,0,0,255
-RGBA_POPUP_MESSAGE_TEXT=0,0,0,255
-RGBA_MENU_TEXT=255,255,255,255
-RGBA_MENU_SELECTED_TEXT=255,255,125,255
-RGBA_LABEL_TEXT=255,255,0,255
-RGBA_TEXT=255,255,255,255
-RGBA_HELP_TITLE_TEXT=255,0,0,255
-RGBA_HELP_TEXT=0,0,0,255
+RGBA_TOOLBAR_TEXT_SHADOW=0,0,0,0
 
+RGBA_BUTTONBAR_TEXT=0,0,0,255
+RGBA_BUTTONBAR_TEXT_SHADOW=0,0,0,0
+
+RGBA_BUTTONBAR_SELECTED_TEXT=255,255,255,255
+RGBA_BUTTONBAR_SELECTED_TEXT_SHADOW=0,0,0,255
+
+RGBA_POPUP_TITLE_TEXT=255,0,0,255
+RGBA_POPUP_TITLE_TEXT_SHADOW=0,0,0,0
+
+RGBA_POPUP_MESSAGE_TEXT=0,0,0,255
+RGBA_POPUP_MESSAGE_TEXT_SHADOW=0,0,0,0
+
+RGBA_MENU_TEXT=255,255,255,255
+RGBA_MENU_TEXT_SHADOW=0,0,0,0
+
+RGBA_MENU_SELECTED_TEXT=255,255,125,255
+RGBA_MENU_SELECTED_TEXT_SHADOW=0,0,0,255
+
+RGBA_LABEL_TEXT=255,255,0,255
+RGBA_LABEL_TEXT_SHADOW=0,0,0,0
+
+RGBA_TEXT=255,255,255,255
+RGBA_TEXT_SHADOW=0,0,0,0
+
+RGBA_HELP_TITLE_TEXT=255,0,0,255
+RGBA_HELP_TITLE_TEXT_SHADOW=0,0,0,0
+
+RGBA_HELP_TEXT=0,0,0,255
+RGBA_HELP_TEXT_SHADOW=0,0,0,0
 
 ##########################################################################################################
 #GENERAL SETTINGS:
 ##########################################################################################################
 POS_APP_NAME_TEXT=2,1
-POS_CLOCK_TEXT=390,256
+POS_CLOCK_TEXT=370,256
 POS_FREE_MEMORY_LABEL=2,256
 POS_FREE_MEMORY_TEXT=60,256
 
