--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -180,7 +180,7 @@ POS_SETTINGS=0,40
 ##########################################################################################################
 #MEDIA LIBRARY SETTINGS:
 ##########################################################################################################
-POS_MEDIALIBRARY=90,75
+POS_MEDIALIBRARY=90,65
 POS_MEDIALIBRARY_QUERY=0,40
 
 POS_MEDIALIBRARY_INFO_BKG=5,200
@@ -195,8 +195,10 @@ POS_MEDIALIBRARY_GENRE_LABEL=7,205
 POS_MEDIALIBRARY_YEAR_LABEL=7,220
 POS_MEDIALIBRARY_TIME_LABEL=210,220
 POS_MEDIALIBRARY_RATING_LABEL=7,235
+POS_MEDIALIBRARY_PLAYED_LABEL=210,235
 
 POS_MEDIALIBRARY_GENRE_VALUE=85,205
 POS_MEDIALIBRARY_YEAR_VALUE=85,220
 POS_MEDIALIBRARY_TIME_VALUE=255,220
 POS_MEDIALIBRARY_RATING_VALUE=85,233
+POS_MEDIALIBRARY_PLAYED_VALUE=255,235
