--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -131,14 +131,17 @@ POS_PROGRESS=5,245
 
 #COVERART:
 POS_COVERART=2,35
-COVERART_HEIGHT=90
 COVERART_WIDTH=90
+COVERART_HEIGHT=90
 
 
 ##########################################################################################################
 #FILE BROWSER SETTINGS:
 ##########################################################################################################
 POS_FILE_BROWSER=0,40
+POS_FILE_BROWSER_COVERART=390,90
+FILE_BROWSER_COVERART_WIDTH=90
+FILE_BROWSER_COVERART_HEIGHT=90
 
 
 ##########################################################################################################
@@ -180,7 +183,7 @@ POS_SETTINGS=0,40
 ##########################################################################################################
 #MEDIA LIBRARY SETTINGS:
 ##########################################################################################################
-POS_MEDIALIBRARY=90,65
+POS_MEDIALIBRARY=90,55
 POS_MEDIALIBRARY_QUERY=0,40
 
 POS_MEDIALIBRARY_INFO_BKG=5,200
@@ -202,3 +205,7 @@ POS_MEDIALIBRARY_YEAR_VALUE=85,220
 POS_MEDIALIBRARY_TIME_VALUE=255,220
 POS_MEDIALIBRARY_RATING_VALUE=85,233
 POS_MEDIALIBRARY_PLAYED_VALUE=255,235
+
+POS_MEDIALIBRARY_COVERART=425,200
+MEDIALIBRARY_COVERART_WIDTH=50
+MEDIALIBRARY_COVERART_HEIGHT=50
