--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -4,8 +4,11 @@
 
 
 ##########################################################################################################
-#TEXT COLORS:
+#FONTS SETTINGS:
 ##########################################################################################################
+STR_FONT_NORMAL_NAME=flash0:/font/ltn0.pgf
+FONT_NORMAL_SIZE=50
+
 RGBA_TOOLBAR_TEXT=0,0,0,255
 RGBA_TOOLBAR_TEXT_SHADOW=0,0,0,0
 
@@ -39,13 +42,20 @@ RGBA_HELP_TITLE_TEXT_SHADOW=0,0,0,0
 RGBA_HELP_TEXT=0,0,0,255
 RGBA_HELP_TEXT_SHADOW=0,0,0,0
 
+
+##########################################################################################################
+#MENU SETTINGS:
+##########################################################################################################
+MENU_INTERLINE=0
+
+
 ##########################################################################################################
 #GENERAL SETTINGS:
 ##########################################################################################################
-POS_APP_NAME_TEXT=2,1
-POS_CLOCK_TEXT=370,256
-POS_FREE_MEMORY_LABEL=2,256
-POS_FREE_MEMORY_TEXT=60,256
+POS_APP_NAME_TEXT=2,3
+POS_CLOCK_TEXT=370,258
+POS_FREE_MEMORY_LABEL=2,258
+POS_FREE_MEMORY_TEXT=60,258
 
 POS_TOOLBAR_1=0,0
 POS_TOOLBAR_2=0,255
@@ -56,16 +66,17 @@ POS_BUTTON_4=288,22
 POS_BUTTON_5=384,22
 
 POS_BATTERY_ICON=365,1
-POS_BATTERY_TEXT=405,1
+POS_BATTERY_TEXT=405,3
 POS_VOLUME_ICON=225,256
-POS_VOLUME_TEXT=245,256
+POS_VOLUME_TEXT=245,258
 POS_CPU_ICON=230,1
-POS_CPU_TEXT=248,1
+POS_CPU_TEXT=248,3
 POS_HEADPHONES_ICON=345,1
 POS_REMOTE_ICON=310,1
 
 POS_HELP=110,51
 POS_POPUP=120,96
+
 
 ##########################################################################################################
 #PLAYER SETTINGS:
@@ -88,7 +99,7 @@ POS_TITLE_VALUE=154,35
 POS_ARTIST_VALUE=154,50
 POS_ALBUM_VALUE=154,65
 POS_GENRE_VALUE=154,80
-POS_RATING_VALUE=394,80
+POS_RATING_VALUE=394,78
 POS_YEAR_VALUE=154,95
 POS_PLAYED_VALUE=424,95
 POS_TIME_VALUE=154,110
