--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -6,7 +6,12 @@
 ##########################################################################################################
 #FONTS SETTINGS:
 ##########################################################################################################
+#Use $skinimage for the skin's image path:
+#  ex.
+#STR_FONT_NORMAL_NAME=$skinimage/verdana.oft
 STR_FONT_NORMAL_NAME=flash0:/font/ltn0.pgf
+
+#Applies only to INTRAFONT (this is the value used by oslIntraFontSetStyle * 100):
 FONT_NORMAL_SIZE=50
 
 RGBA_TOOLBAR_TEXT=0,0,0,255
@@ -106,19 +111,19 @@ POS_TIME_VALUE=154,110
 POS_TRACK_VALUE=424,110
 
 #FILE SPECS:
-POS_FILE_SPECS_BKG=30,150
+POS_FILE_SPECS_BKG=10,150
 
-POS_MODE_LABEL=32,155
-POS_BITRATE_LABEL=32,170
-POS_SAMPLERATE_LABEL=32,185
-POS_FILE_FORMAT_LABEL=32,200
-POS_EMPHASIS_LABEL=32,215
+POS_MODE_LABEL=12,155
+POS_BITRATE_LABEL=12,170
+POS_SAMPLERATE_LABEL=12,185
+POS_FILE_FORMAT_LABEL=12,200
+POS_EMPHASIS_LABEL=12,215
 
-POS_MODE_VALUE=100,155
-POS_BITRATE_VALUE=100,170
-POS_SAMPLERATE_VALUE=100,185
-POS_FILE_FORMAT_VALUE=100,200
-POS_EMPHASIS_VALUE=100,215
+POS_MODE_VALUE=80,155
+POS_BITRATE_VALUE=80,170
+POS_SAMPLERATE_VALUE=80,185
+POS_FILE_FORMAT_VALUE=80,200
+POS_EMPHASIS_VALUE=80,215
 
 #PLAYER STATUS:
 POS_PLAYER_STATUS_BKG=250,150
