--- a/src_v2/prx/Makefile
+++ b/src_v2/prx/Makefile
@@ -12,9 +12,9 @@ PRX_EXPORTS = support.exp
 #USE_KERNEL_LIBC=1
 USE_KERNEL_LIBS=1
 
-LIBDIR = 
+LIBDIR =
 LDFLAGS = -mno-crt0 -nostartfiles
-LIBS = 
+LIBS = -lpsppower_driver
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
