--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -10,6 +10,8 @@
 #  ex.
 #STR_FONT_NORMAL_NAME=$skinimage/verdana.oft
 STR_FONT_NORMAL_NAME=flash0:/font/ltn0.pgf
+#Uncomment this for Korean language
+#STR_FONT_ALT_NAME=flash0:/font/kr0.pgf
 
 #Applies only to INTRAFONT (this is the value used by oslIntraFontSetStyle * 100):
 FONT_NORMAL_SIZE=50
