--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -2,6 +2,13 @@
 #     Author    : Sakya
 #     Contacts  : sakya_tg@yahoo.it
 
+##########################################################################################################
+#IMAGE DIRECTORY SETTING:
+##########################################################################################################
+#If you want to use images from another skin (and only change some settings/position) uncomment the next line and set
+#the value to the skin's name you want to use
+#STR_IMAGE_PATH=default
+
 
 ##########################################################################################################
 #FONTS SETTINGS:
@@ -10,8 +17,6 @@
 #  ex.
 #STR_FONT_NORMAL_NAME=$skinimage/verdana.oft
 STR_FONT_NORMAL_NAME=flash0:/font/ltn0.pgf
-#Uncomment this for Korean language
-#STR_FONT_ALT_NAME=flash0:/font/kr0.pgf
 
 #Applies only to INTRAFONT (this is the value used by oslIntraFontSetStyle * 100):
 FONT_NORMAL_SIZE=50
