--- a/src_v2/makefile
+++ b/src_v2/makefile
@@ -4,7 +4,7 @@ OBJS = prx/supportlib.o \
        players/mp3playerME.o players/aa3playerME.o players/flacplayer.o players/player.o players/equalizer.o \
        system/clock.o system/freeMem.o system/mem64.o miniconv/MiniConv.o system/fat.o system/opendir.o \
        system/exception.o system/brightness.o \
-       others/audioscrobbler.o others/medialibrary.o others/log.o others/strreplace.o \
+       others/bookmark.o others/audioscrobbler.o others/medialibrary.o others/log.o others/strreplace.o \
        gui/settings.o gui/skinsettings.o gui/languages.o gui/menu.o gui/common.o \
        gui/gui_fileBrowser.o gui/gui_player.o gui/gui_playlistsBrowser.o \
        gui/gui_playlistEditor.o gui/gui_settings.o gui/gui_mediaLibrary.o \
