-Added: Scrolling text when string is too long in all menues and song title -Fixed: Navigation in the Media Library (when pressing circle you'll be taken to the previous selection, not on the main menu) -Fixed: Added setting to set CPU clock for WMA -Fixed: Track restart when pressing L on WMA, FLAC, ATRAC3(+), MP3 when played with libMad -Fixed: Suspend and resume for WMA -Fixed: Changed the default setting to play MP3 with Media Engine -Fixed: X/O Swap (please note that help screen will always say X=Confirm, O=Cancel, I din't changed it) -Fixed: Bug when creating playlist from Media Library

--- a/src_v2/skins/default/skin.cfg
+++ b/src_v2/skins/default/skin.cfg
@@ -17,7 +17,6 @@
 #  ex.
 #STR_FONT_NORMAL_NAME=$skinimage/verdana.oft
 STR_FONT_NORMAL_NAME=flash0:/font/ltn0.pgf
-
 #Applies only to INTRAFONT (this is the value used by oslIntraFontSetStyle * 100):
 FONT_NORMAL_SIZE=50
 
@@ -108,6 +107,8 @@ POS_TIME_LABEL=96,110
 POS_TRACK_LABEL=334,110
 
 POS_TITLE_VALUE=154,35
+TITLE_VALUE_WIDTH=320
+
 POS_ARTIST_VALUE=154,50
 POS_ALBUM_VALUE=154,65
 POS_GENRE_VALUE=154,80
